<resources>
    <string name="app_name">Kraken Client</string>
    <string name="humidity_title">Humidity:</string>
    <string name="home_title">Home</string>
    <string name="temperature_title">Temperature:</string>
    <string name="grow_title">Grow</string>
    <string name="thumbnail_text">Touch to start streaming</string>
    <string name="dashboard_menu_title">Dashboard</string>
    <string name="switches_menu_title">Switches</string>
    <string name="settings_menu_title">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">V 1.0.0</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="switch_description">Manage the switch relays attached to your grow.</string>
    <string name="pump_title">Pump</string>
    <string name="light_title">Light</string>
    <string name="exhaust_title">Exhaust</string>
    <string name="humidifier_title">Humidifier</string>
    <string name="home_pressure_title">Pressure:</string>

    <string name="temperature_value_mask">%.0f C°</string>
    <string name="humidity_value_mask">%.0f</string>
</resources>
