<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".50"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".50"/>

    <TextView
        android:id="@+id/switchDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/triple_margin"
        android:layout_marginTop="@dimen/triple_margin"
        android:text="@string/switch_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/TitleBody"
        tools:enabled="true" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/pumpSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/triple_margin"
        android:layout_marginTop="@dimen/quadruple_margin"
        android:text="@string/pump_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switchDescription" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/exhaustSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/triple_margin"
        android:layout_marginTop="@dimen/triple_margin"
        android:text="@string/exhaust_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelineHorizontal" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/lightSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/triple_margin"
        android:layout_marginTop="@dimen/quadruple_margin"
        android:text="@string/light_title"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical"
        app:layout_constraintTop_toBottomOf="@id/switchDescription" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/humidifierSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/triple_margin"
        android:layout_marginTop="@dimen/triple_margin"
        android:text="@string/humidifier_title"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical"
        app:layout_constraintTop_toBottomOf="@id/guidelineHorizontal" />

</androidx.constraintlayout.widget.ConstraintLayout>
