<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.features.dashboard.DashboardFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".60" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/streamingPanel"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/triple_margin"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/thumbnailImg"
            android:layout_width="@dimen/thumbnail_width"
            android:layout_height="@dimen/thumbnail_height"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_fingerprint" />

        <TextView
            android:id="@+id/thumbnailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/double_margin"
            android:text="@string/thumbnail_text"
            style="@style/SubtitleBody"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/thumbnailImg" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/measurePanel"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="@drawable/side_nav_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/cityTitle"
            style="@style/TitleBody"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/triple_margin"
            android:layout_marginTop="@dimen/double_margin"
            android:layout_marginEnd="@dimen/double_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Sunnyvale" />

        <ImageView
            android:id="@+id/sunImg"
            android:layout_width="@dimen/icon_side_size"
            android:layout_height="@dimen/icon_side_size"
            android:layout_marginStart="@dimen/triple_margin"
            android:layout_marginTop="@dimen/default_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cityTitle"
            app:srcCompat="@drawable/ic_sun" />

        <TextView
            android:id="@+id/cityTemperatureTitle"
            style="@style/SubtitleBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/double_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/temperature_title"
            app:layout_constraintStart_toEndOf="@+id/sunImg"
            app:layout_constraintTop_toBottomOf="@+id/cityTitle" />

        <TextView
            android:id="@+id/cityTemperatureValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            style="@style/SubtitleBody"
            app:layout_constraintStart_toEndOf="@+id/cityTemperatureTitle"
            app:layout_constraintTop_toBottomOf="@+id/cityTitle"
            tools:text="50" />

        <TextView
            android:id="@+id/cityHumidityTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/double_margin"
            android:layout_marginTop="@dimen/half_margin"
            android:text="@string/humidity_title"
            style="@style/SubtitleBody"
            app:layout_constraintStart_toEndOf="@+id/sunImg"
            app:layout_constraintTop_toBottomOf="@+id/cityTemperatureTitle" />

        <TextView
            android:id="@+id/cityHumidityValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/half_margin"
            style="@style/SubtitleBody"
            app:layout_constraintStart_toEndOf="@+id/cityHumidityTitle"
            app:layout_constraintTop_toBottomOf="@+id/cityTemperatureValue"
            tools:text="30%" />

        <TextView
            android:id="@+id/homeTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/triple_margin"
            android:layout_marginTop="@dimen/quadruple_margin"
            android:layout_marginEnd="@dimen/double_margin"
            android:text="@string/home_title"
            style="@style/TitleBody"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cityHumidityTitle" />

        <TextView
            android:id="@+id/homePressureTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/double_margin"
            android:layout_marginTop="@dimen/half_margin"
            android:text="@string/home_pressure_title"
            style="@style/SubtitleBody"
            app:layout_constraintStart_toEndOf="@+id/homeImg"
            app:layout_constraintTop_toBottomOf="@+id/homeTemperatureTitle" />

        <TextView
            android:id="@+id/homePressureValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/half_margin"
            style="@style/SubtitleBody"
            app:layout_constraintStart_toEndOf="@+id/homePressureTitle"
            app:layout_constraintTop_toBottomOf="@+id/homeTemperatureTitle"
            tools:text="1000" />

        <TextView
            android:id="@+id/homeTemperatureTitle"
            style="@style/SubtitleBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/double_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/temperature_title"
            app:layout_constraintStart_toEndOf="@+id/homeImg"
            app:layout_constraintTop_toBottomOf="@+id/homeTitle" />

        <TextView
            android:id="@+id/homeTemperatureValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            style="@style/SubtitleBody"
            app:layout_constraintStart_toEndOf="@+id/homeTemperatureTitle"
            app:layout_constraintTop_toBottomOf="@+id/homeTitle"
            tools:text="50" />

        <ImageView
            android:id="@+id/homeImg"
            android:layout_width="@dimen/icon_side_size"
            android:layout_height="@dimen/icon_side_size"
            android:layout_marginStart="@dimen/triple_margin"
            android:layout_marginTop="@dimen/default_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/homeTitle"
            app:srcCompat="@drawable/ic_home" />

        <TextView
            android:id="@+id/growTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/triple_margin"
            android:layout_marginTop="@dimen/quadruple_margin"
            android:layout_marginEnd="@dimen/double_margin"
            android:text="@string/grow_title"
            style="@style/TitleBody"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/homePressureTitle" />

        <TextView
            android:id="@+id/growTemperatureTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/double_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/temperature_title"
            style="@style/SubtitleBody"
            app:layout_constraintStart_toEndOf="@+id/growImg"
            app:layout_constraintTop_toBottomOf="@+id/growTitle" />

        <TextView
            android:id="@+id/growTemperatureValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            style="@style/SubtitleBody"
            app:layout_constraintStart_toEndOf="@+id/growTemperatureTitle"
            app:layout_constraintTop_toBottomOf="@+id/growTitle"
            tools:text="50" />

        <TextView
            android:id="@+id/growHumidityTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/double_margin"
            android:layout_marginTop="@dimen/half_margin"
            android:text="@string/humidity_title"
            style="@style/SubtitleBody"
            app:layout_constraintStart_toEndOf="@+id/growImg"
            app:layout_constraintTop_toBottomOf="@+id/growTemperatureTitle" />

        <TextView
            android:id="@+id/growHumidityValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/half_margin"
            style="@style/SubtitleBody"
            app:layout_constraintStart_toEndOf="@+id/growHumidityTitle"
            app:layout_constraintTop_toBottomOf="@+id/growTemperatureTitle"
            tools:text="30%" />

        <ImageView
            android:id="@+id/growImg"
            android:layout_width="@dimen/icon_side_size"
            android:layout_height="@dimen/icon_side_size"
            android:layout_marginStart="@dimen/triple_margin"
            android:layout_marginTop="@dimen/default_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/growTitle"
            app:srcCompat="@drawable/ic_tent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
